# botagent

./: .clippy.toml  Cargo.toml  rustfmt.toml
crates/agent/: .env.example  Cargo.toml  README.md
crates/agent/migrations/: 20250127000001_initial_migration.sql
crates/agent/src/: config.rs  lib.rs  main.rs
crates/agent/src/database/: connection.rs  message_repository.rs  migrations.rs  mod.rs  task_repository.rs  user_repository.rs
crates/agent/src/database/tests/: message_repository_tests.rs  user_repository_tests.rs
crates/shared/: Cargo.toml
crates/shared/examples/: computer_actions_demo.rs  data_models_demo.rs
crates/shared/src/: error.rs  lib.rs
crates/shared/src/constants/: models.rs
crates/shared/src/types/: computer_action.rs  message.rs  task.rs
crates/shared/src/utils/: time.rs
crates/shared/tests/: integration_test.rs
