[package]
name = "agent"
version = "0.1.0"
edition = "2021"
description = "ByteBot AI agent service written in Rust"

[lib]
name = "agent"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
# Web framework and async runtime
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }
sea-orm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for AI APIs
reqwest = { workspace = true }

# WebSocket support
tokio-tungstenite = { workspace = true }
socketioxide = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }

# Shared types
shared = { path = "../shared" }

# Configuration
envy = "0.4"
dotenvy = "0.15"

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "task_benchmarks"
harness = false
