[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "Shared types and utilities for ByteBot Rust services"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database types
sqlx = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# HTTP
axum = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { version = "9.2" }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "shared_benchmarks"
harness = false
